--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=ppapi/index.html" />
+    <meta http-equiv="refresh" content="0; url=docs/ppapi/index.html" />
   </head>
   <body>
     <h>This is a redirect page</h>
